--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "gh-pages": "^2.2.0"
   }
 }
